Bug 1413466 - Fire events after iterating ServiceWorkerManager::mControlledDocuments is done. r=bkelly

It's possible to modify mControlledDocuments from oncontrollerchange handler.
We should fire events after iteration to prevent updating this hashtable while reading it.